# Bliink

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  setup-firewall.ps1  tsconfig.json
.github/workflows/: release.yml
app/: bliink-ui.css  globals.css  layout.tsx  page.tsx  world-atlas.d.ts
app/chats/: page.tsx
app/components/: AppShell.tsx  CallOverlay.tsx  ChatListener.tsx  DeviceCard.tsx  FileDropZone.tsx  FileThumb.tsx  Icons.tsx  IncomingRequestDialog.tsx  PairCircle.tsx  ProgressBar.tsx  SearchBar.tsx  Sidebar.tsx  TitleBar.tsx  TransferGroup.tsx  TransferItem.tsx  TransferListener.tsx  WorldMap.tsx
app/components/chat/: ChatInput.tsx  MessageBubble.tsx
app/history/: page.tsx
app/lib/: call-manager.ts  geoip.ts  store.ts  tauri-api.ts  utils.ts
app/settings/: page.tsx
app/transfer/: page.tsx
app/web/: page.tsx
src-tauri/: Cargo.toml  Info.plist  installer-hooks.nsh  tauri.conf.json  web_client.html
src-tauri/assets/web/: index.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  commands.rs  config.rs  crypto.rs  discovery.rs  history.rs  lib.rs  p2p.rs  thumbs.rs  transfer.rs  types.rs  web.rs
