[package]
name = "app"
version = "0.6.1"
description = "Fast, encrypted file sharing for your local network"
authors = ["tedydonel"]
license = "MIT"
repository = "https://github.com/tedydonel/Bliink"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Device discovery
socket2 = "0.5"
# Enumerate network interfaces so discovery can broadcast on every subnet
# (multi-NIC machines: Wi-Fi + Ethernet + VPN/Hyper-V/WSL virtual adapters)
if-addrs = "0.13"

# Unique identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Networking & transfer
sha2 = "0.10"
hex = "0.4"

# Database (embedded SQLite, no external server needed)
rusqlite = { version = "0.32", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hostname detection
hostname = "0.4"

# Encryption
aes-gcm = "0.10"
rand = "0.8"
x25519-dalek = "2"

# System directories
dirs-next = "2.0"

# Thumbnails
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"] }
base64 = "0.22"

# Internet P2P (NAT hole punching + encrypted relay)
iroh = "0.29.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }
